# kkt-lime-explanations

./: README.md
XMOO-UI/: custom-theme.ts  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
XMOO-UI/src/: app.postcss
XMOO-UI/src/lib/: store.ts
XMOO-UI/src/lib/components/: DynamicTable.svelte  Preferences.svelte  Table_tradeoffs.svelte
XMOO-UI/src/lib/components/visual/: BarChart.svelte  BarChartHorizontal.svelte  EchartsComponent.svelte  RadarChart.svelte  constants.ts  helperFunctions.ts
XMOO-UI/src/routes/: +layout.svelte  +page.svelte
tradeoff_analysis/: pyproject.toml  requirements.txt
tradeoff_analysis/explainable_moo/: api.py
tradeoff_analysis/explainable_moo/core/lime_explanations/: approximate_solutions.py  compute_tradeoffs.py  kkt_multipliers.py  solve_problem.py
tradeoff_analysis/explainable_moo/data/: DTLZ2_5x_3f.csv  DTLZ2_5x_3f_10115.csv  DTLZ2_8x_5f.csv  car_crash_10112.csv  car_crash_5118.csv  car_front.csv  data.csv  paper_front.csv  river_pollution_10178.csv
tradeoff_analysis/explainable_moo/problems/: problems.py
tradeoff_analysis/explainable_moo/utils/: get_front_paper_problem.py  get_front_river_pollution.py  get_front_vehicle_crash_problem.py  initweight.py  utils.py
tradeoff_analysis/notebooks/: Example_approximate_points.ipynb  Example_approximate_points_hardcoded.ipynb  Example_multipliers_gekko.ipynb  Example_multipliers_scipy.ipynb  Example_tradeoff_analysis_ZDT.ipynb
